добавляет урок Репеты

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--https://github.com/luxplanjay/js-22/tree/01-%D0%BF%D0%B5%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D0%B5-%D0%B8-%D0%B2%D0%B5%D1%82%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D1%8F/js-->
     <script src="js/task-1.js" type="module"></script>
     <script src="js/task-2.js" type="module"></script>
     <script src="js/task-3.js" type="module"></script>
@@ -13,5 +14,17 @@
     <script src="js/task-5.js" type="module"></script>
     <script src="js/task-6.js" type="module"></script>
     <script src="js/repeta.js" type="module"></script>
+    <script src="js/Репета/01-vars.js" type="module"></script>
+    <script src="js/Репета/02-input.js" type="module"></script>
+    <script src="js/Репета/03-numbers.js" type="module"></script>
+    <script src="js/Репета/04-strings.js" type="module"></script>
+    <script src="js/Репета/05-comparison-operators.js" type="module"></script>
+    <script src="js/Репета/06-1-segment.js" type="module"></script>
+    <script src="js/Репета/06-2-chat.js" type="module"></script>
+    <script src="js/Репета/06-3-subscription.js" type="module"></script>
+    <script src="js/Репета/06-logical-operators.js" type="module"></script>
+    <script src="js/Репета/07-1-purchase.js" type="module"></script>
+    <script src="js/Репета/07-2-discount.js" type="module"></script>
+    <script src="js/Репета/07-branching.js" type="module"></script>
 </body>
 </html>
